--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <img src = "media/trans.png">
   <p>Memes (Photo Manipulation)</p>
   <br>
-  <img src = "media/PROJ1.gif">
+  <img src = "media/PROJ1.gif" alt="file too big">
   <p>Arduino Assembling (Video Production)</p>
   <br>
   <br>
